Mac: Disable warnings about having no GLContextCGL

ImageTransportSurfaceOverlayMac is written under the assumption that it
is only ever paired with a GLContextCGL. This assumption has recently
been broken. The ERROR here was, as a result, creating an unruly amout
of console spam.

Bug: 866520
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I3f3524f3f45e9e4cdaae09aeb672c9ab3b8edafa
Reviewed-on: https://chromium-review.googlesource.com/1147100
Reviewed-by: Robert Ma <robertma@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577211}
Former-commit-id: d63a2e68d79250d0da55fa00aa2ae0f680942676